feat: implémentation de l'authentification et sécurisation des endpoints utilisateurs